# cparser-py

./: README.md  pyproject.toml
src/cparser/: core.py  grammar.lark
tests/: 0000_hello_world.c  0001_int_vars.c  0002_float_vars.c  0003_char_vars.c  0004_math_expr.c  0005_input.c  0006_div_mod.c  0007_if_stmt.c  0008_if_else.c  0009_nested_if.c  0010_else_if.c  0011_switch.c  0012_while.c  0013_do_while.c  0014_for_loop.c  0015_nested_loops.c  0016_break_continue.c  0017_arrays_simple.c  0018_array_traversal.c  0019_simple_func.c  0020_func_params.c  0021_scope_vars.c  0022_static_vars.c  0023_recursion_fact.c  0024_recursion_fib.c  0025_pass_by_val.c  0026_math_lib.c  0027_char_funcs.c  0028_random.c  0029_pointer_basic.c  0030_pointer_deref.c  0031_pointer_types.c  0032_pointer_arith.c  0033_array_ptr.c  0034_pass_by_ref.c  0035_ptr_to_ptr.c  0036_null_ptr.c  0037_const_ptr.c  0038_void_ptr.c  0039_ptr_diff.c  (+163 more)
