[project]
name = "cparser"
version = "0.1.0"
description = "A C99 parser with C11 extensions built with Lark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.0.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cparser"]
